--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "svg.js": "^2.7.1",
     "typescript": "^3.2.2"
   },
   "scripts": {
